# s7-lsp

./: .gitignore  .graphifyignore  LICENSE  README.md  pyproject.toml  report.md
.github/workflows/: ci.yml
examples/: sample.s7res
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src/s7_lsp/: __init__.py  __main__.py  ast_nodes.py  server.py  workspace.py
src/s7_lsp/features/: __init__.py  completion.py  definition.py  diagnostics.py  hover.py  references.py  symbols.py  utils.py
src/s7_lsp/parsers/: __init__.py  awl_grammar.lark  awl_parser.py  parser_utils.py  resource_grammar.lark  resource_parser.py  scl_grammar.lark  scl_parser.py
src/s7_lsp/semantic/: __init__.py  resource_diagnostics.py  scope.py  semantic_diagnostics.py  symbol_table.py  type_checker.py  type_info.py
tests/: conftest.py  test_completion.py  test_definition.py  test_hover.py  test_parsers.py  test_references.py  test_scope.py  test_semantic_diagnostics.py  test_server.py  test_symbol_table.py  test_type_info.py  test_utils.py
